<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="twitterUsername">\@joeytribbiani</string>
    <string name="app_name">Sessions</string>

    <string name="fcm_token">FCM Token: %s</string>
    <string name="forgotPass">
    <![CDATA[ <font color=#353447>Forgot Password?</font><b><font color=#FF6B6B face=@string/rc_bold> Reset Here!</b>  .]]>
    </string>
    <string name="long_dummy_text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut blanditiis eius fuga harum impedit ipsa neque placeat, suscipit ut veniam voluptatum? Asperiores aspernatur cupiditate dicta dolorem ea esse eveniet magnam repudiandae suscipit voluptates? Itaque, molestias tenetur! Accusamus alias amet autem delectus dignissimos dolor, ea exercitationem, in minima natus officia officiis quaerat recusandae saepe sed similique totam voluptatum. Accusamus cupiditate dignissimos earum exercitationem odit officiis perferendis quidem repudiandae. A alias dicta dolores id illo natus placeat quod. Alias aperiam aspernatur doloremque ducimus facilis iure voluptatum? A ab accusantium culpa dolor eum fugit harum, illum iusto maiores numquam, obcaecati placeat unde voluptas! Ab accusantium, adipisci aliquam asperiores consequuntur delectus deserunt dolor eius esse fugit hic ipsam itaque iusto nemo optio placeat porro quae quo vel vero? Blanditiis harum illo impedit modi, pariatur rem unde veritatis! Autem error excepturi facere qui quos.</string>

    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree to all the Terms and Conditions.</string>
    <string name="register">Register Here!</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="SignUp">New User? Register Here</string>
    <string name="back">BACK</string>
    <string-array name="Departments">
        <item>Select Department</item>
        <item>IT</item>
        <item>COMPS</item>
        <item>EXTC</item>
        <item>MECH</item>
        <item>ETRX</item>
        <item>Other</item>
    </string-array>

    <string-array name="UserType">
        <item>Select User Type</item>
        <item>Student</item>
        <item>Faculty</item>
        <item>Other</item>
    </string-array>

    <string-array name="BuildingType">
        <item>Select Building</item>
        <item>Arya</item>
        <item>Bhaskara</item>
        <item>Other</item>
    </string-array>
    <string name="Registration">
 <![CDATA[ <font color=#353447>New User?</font><b><font color=#FF6B6B face=@string/rc_bold> Register Here!</b>  .]]>
  </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="Services">
        <item>Projector</item>
        <item>White Board</item>
        <item>Speaker and Mic</item>
        <item>Presentation Materials</item>
    </string-array>

    <string name="profile">Profile</string>
    <string name="booking">My Bookings</string>
    <string name="title_activity_reserve">Reserve</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_xyz">xyz</string>
    <string name="hall">Hall</string>

</resources>